CSS/styles.css
/* ... */
/*--------------------MAIN STYLES-------------------*/
main {
    width: 100%;
    height: auto;
    background-color: var(--off-white) ;
}
.main-exchange-container {
    width: 100%;
    height: auto;
    padding-top: 8rem;
    padding-bottom: 3rem;
    text-align: center;
}
.main-exchange-container--title {
    width: 90%;
    min-width: 288px;
    max-width: 900px;
    margin: 0 auto;
}
.main-exchange-container .backgroundImg {
    width: 20rem;
    height: 20rem;
    margin: 0 auto;
    margin-bottom: 5rem;
    background-image: url(/assets/images/bitcoin.svg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.main-exchange-container--title h2 {
    margin-bottom: 3rem;
    font-size: 2.4rem;
    font-weight: bold;
    line-height: 2.6rem;
    color: var(--black);
}
.main-exchange-container--title p {
    margin-bottom: 3rem;
    font-size: 1.4rem;
    font-weight: 500;
    line-height: 1.6rem;
    color: #757575;
}
/*-------GRID STYLES FOR EXCHANGE TABLE---------*/
.main-tables-container{
    height: auto;
    display: grid;
    margin: 0 auto;
    gap: 1px; 
    justify-content: center; 
    margin-bottom: 16px; 
    grid-template-columns: repeat(2, 101px);
    grid-template-rows: repeat(5, 39px);
    grid-template-areas: 
        "title ." 
        "bitcoin bnum" 
        "ethereum ethnum" 
        "ripple ripnum" 
        "stellar stenum";
}
.main-tables-container h5 {
    height: 39px;
    padding: 10% 0 10% 12px;
    font-size: 1.8rem;
    font-weight: bold;
    line-height: 2.3rem;
    text-align: left;
    color: #FF9536;
    grid-area: title;
}
.bitcoin {
    height: 39px;
    padding: 10% 0 10% 12px;
    font-family: var(--font-inter);
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 19px;
    border-radius: 8px 0px 0px 0px;
    text-align: left;
    letter-spacing: -0.02em;
    color: var(--table-text);
    background-color: var(--white);
    grid-area: bitcoin;
}
.ethereum {
    height: 39px;
    padding: 10% 0 10% 12px;
    font-family: var(--font-inter);
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 19px;
    text-align: left;
    letter-spacing: -0.02em;
    color: var(--table-text);
    background-color: var(--white);
    grid-area: ethereum; 
}
.ripple {
    height: 39px;
    padding: 10% 0 10% 12px;
    font-family: var(--font-inter);
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 19px;
    text-align: left;
    letter-spacing: -0.02em;
    color: var(--table-text);
    background-color: var(--white);
    grid-area: ripple;
}
.stellar {
    height: 39px;
    padding: 10% 0 10% 12px;
    font-family: var(--font-inter);
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 19px;
    border-radius: 0px 0px 0px 8px;
    text-align: left;
    letter-spacing: -0.02em;
    color: var(--table-text);
    background-color: var(--white);
    grid-area: stellar;
}
.bnum {
    height: 39px;
    padding: 10% 0 10% 12px;
    font-family: var(--font-inter);
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 19px;
    border-radius: 0px 8px 0px 0px;
    text-align: left;
    letter-spacing: -0.02em;
    color: var(--table-currency);
    background-color: var(--white);
    display: flex;
    justify-content:space-evenly;
    align-items: center;
    grid-area: bnum;
}
.ethnum {
    height: 39px;
    padding: 10% 0 10% 12px;
    font-family: var(--font-inter);
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 19px;
    text-align: left;
    letter-spacing: -0.02em;
    color: var(--table-currency);
    background-color: var(--white);
    display: flex;
    justify-content:space-evenly;
    align-items: center;
    grid-area: ethnum;
}
.ripnum {
    height: 39px;
    padding: 10% 0 10% 12px;
    font-family: var(--font-inter);
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 19px;
    text-align: left;
    letter-spacing: -0.02em;
    color: var(--table-currency);
    background-color: var(--white);
    display: flex;
    justify-content:space-evenly;
    align-items: center;
    grid-area: ripnum;
}
.stenum {
    height: 39px;
    padding: 10% 0 10% 12px;
    font-family: var(--font-inter);
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 19px;
    border-radius: 0px 0px 8px 0px;
    text-align: left;
    letter-spacing: -0.02em;
    color: var(--table-currency);
    background-color: var(--white);
    display: flex;
    justify-content:space-evenly;
    align-items: center;
    grid-area: stenum;
} 
.bnum span, .ripnum span, .stenum span {
    display: inline-block;
    background-image: url(/assets/icons/trending-down.svg);
    background-position: center;
    background-size: cover;
    width: 11px;
    height: 6px;
}
.ethnum span {
    display: inline-block;
    background-image: url(/assets/icons/trending-up.svg);
    background-position: center;
    background-size: cover;
    width: 11px;
    height: 6px;
}
.main-tables-container--update {
    width: 173px;
    height: 31px;
    margin: 0 auto;
    font-size: 1.2rem;
    color: var(--warm-black);
    background-color: var(--soft-orange);
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 8px;
}
/*-------GRID STYLES FOR COMISSIONS TABLE---------*/
.main-tables-comissions {
    width: 202px;
    margin: 0 auto;
}
.main-tables-comissions--title {
    width: 202px;
    font-family: var(--font-inter);
    font-size: 1.9rem;
    font-weight: bold;
    line-height: 23px;
    margin: 40px 0 12px 0;
    display: flex;
    justify-content: left;
    padding-left: 10px;
    color: var(--secondary-blue);
}
.main-tables-comissions--table {
    height: auto;
    width: 202px;
    display: grid;
    gap: 1px;
    margin: 0 auto;
    border-radius: 8px;
    justify-content: center; 
    margin-bottom: 16px; 
    grid-template-columns: repeat(2, 101px);
    grid-template-rows: repeat(4, 39px);
}
/* ... */

